--- a/SQL 튜닝의 시작 1, 한 시간에 싹.다.정.리!/1장. SQL의 작성 의도를 제대로 파악하라.md
+++ b/SQL 튜닝의 시작 1, 한 시간에 싹.다.정.리!/1장. SQL의 작성 의도를 제대로 파악하라.md
@@ -1,16 +1,16 @@
  테마 : Red Graphite / Dark Moss
 ##
-![[../Pasted image 20241203132305.png]]
+![[Pasted image 20241203132305.png]]
 
 
 ## 조인방법
 
 ### Nested Loop Join
-![[../Pasted image 20241203133724.png]]
+![[Pasted image 20241203133724.png]]
 
 ### Hash Join
-![[../Pasted image 20241203133821.png]]
+![[Pasted image 20241203133821.png]]
 
 ## PLAN을 읽는 방법
 
-![[../Pasted image 20241203134819.png]]
+![[Pasted image 20241203134819.png]]
