--- a/SQL 튜닝의 시작 1, 한 시간에 싹.다.정.리!/0장. 들어가기에 앞서.md
+++ b/SQL 튜닝의 시작 1, 한 시간에 싹.다.정.리!/0장. 들어가기에 앞서.md
@@ -82,7 +82,7 @@ SELECT * FROM TABLE(DBMS_XPLAN.DISPLAY_CURSOR('<sql_id>', <child_number>, '<form
 
 
 
-### 문제 하나 풀어보기
+### 튜닝 문제 1
 ```SQL
 ALTER SESSION SET STATISTICS_LEVEL = ALL;
 
@@ -106,6 +106,205 @@ AND   SMTL_PRS_DH BETWEEN TO_DATE(:SMTL_PRS_DH, 'YYYY-MM-DD HH24:MI:SS') -1/24 A
 ;
 
 
+```
+
+### 튜닝 문제 2
+```SQL
+alter session set statistics_level = ALL;
+
+
+SELECT /*+ M263000009pop01  상차편성번호 검색 M263000009pop01.selectLodLotOrgNo  고원택   */
+       'B' || :FRI_ITM_TP_CD || TO_CHAR(SYSDATE, 'YYYYMMDD') || LPAD((NVL(MAX(SUBSTR(LOD_LOT_ORG_NO, -3, 3)),0 )+1), 3, 0) AS LOD_LOT_ORG_NO
+        FROM  TB_M26_CAR_MNG_CMM
+       WHERE SUBSTR(LOD_LOT_ORG_NO, 3, 8) = TO_CHAR(SYSDATE, 'YYYYMMDD')
+         AND SUBSTR(LOD_LOT_ORG_NO, 2, 1) = :FRI_ITM_TP_CD;
+         
+         
+SELECT * FROM   table(dbms_xplan.display_cursor(sql_id=>null, format=>'ALLSTATS LAST'));
+```
+
+### 튜닝 문제 3
+```SQL
+SELECT /* M26-common    반제품 기타 대상재 조회   M26-common.select_trf_req_dtl_urg_adr_sch_e  사용중  김다인추가 */
+       X.*
+       ,CASE WHEN ITM_WTH_BK > SLV_WTH_L2 THEN ITM_WTH_BK ELSE SLV_WTH_L2 END AS ITM_WTH
+  FROM
+(
+    SELECT
+          DECODE(FRI_ITM_ID,:FRI_ITM_ID,'0','1') AS GBN
+          ,FC_M26_PRE_CHR_PROC(B.FRI_ITM_ID) AS CHR_PROC_CD
+          ,A.TRF_INST_NO, B.FRI_ITM_ID, B.FRI_ITM_TP_CD, B.CREATION_TIMESTAMP
+          ,NVL(C.ITM_THK, 0)                   AS ITM_THK
+          ,NVL(C.ITM_WTH, 0)                   AS ITM_WTH_BK 
+          ,NVL(C.ITM_LTH, 0)                   AS ITM_LTH 
+          ,NVL(C.ITM_WGT, 0)                   AS ITM_WGT 
+          ,NVL(C.ITM_ODIA, 0)                  AS ITM_ODIA 
+          ,NVL(C.SHT_CNT, 0)                   AS SHT_CNT
+          ,CASE WHEN FRI_ITM_TP_CD = 'B' 
+                THEN (SELECT NVL(MAX(SLV_WTH_L2),0) FROM TB_M47_PRD_ACT_PLTCM PLTCM WHERE B.FRI_ITM_ID = PLTCM.COIL_ID) 
+                ELSE 0 END                     AS SLV_WTH_L2
+          ,B.TRF_STR_HOU                       AS HOU
+          ,CASE WHEN :FRI_ITM_TP_CD = 'B' AND :FH_FUL_USE_YN = 'Y' THEN '1' ELSE SUBSTR(C.LOD_LOC, 5, 3) END AS ADR
+          ,CASE WHEN :FRI_ITM_TP_CD = 'B' AND :FH_FUL_USE_YN = 'Y' THEN '1' ELSE SUBSTR(C.LOD_LOC, 8, 2) END AS ADR1
+          ,A.FRI_WK_CTT
+          ,B.PRD_NM_CD
+          ,B.TRF_STR_HOU
+          ,B.TRF_OBJ_HOU
+          ,B.URG_MTL_TP
+          ,C.COIL_KND_TP 
+          ,A.CAR_WK_TP
+         ,TO_NUMBER((SELECT MIN(WK_STR_SCH_DH)--투입예정일시 빠른순
+                     FROM APSUSER.TB_APS_COIL_INST
+                     WHERE COIL_PRG_CD IS NULL
+                     AND   COIL_INST_TP = 'A'
+                     AND   COIL_ID = C.COIL_ID)) AS SLP_PRE_REM_DH_NUM
+
+        ,NVL(SCH.TRF_STR_HOU_GATE,NVL(MESAPUSER.FC_M80_M26B0101_GATE(D.YRD_HOU_TP,D.YRD_COL_NO,D.YRD_ADR),D.GATE_NO)) AS STR_GATE_NO
+        ,NVL(SCH.TRF_OBJ_HOU_GATE,MESAPUSER.FC_M26_TRF_OBJ_HOU_GATE(B.TRF_OBJ_HOU)) AS OBJ_GATE_NO
+      FROM TB_M26_TRF_REQ_CMM A
+          ,TB_M26_TRF_REQ_DTL B
+          ,VI_M77_ITMINF_001 C
+          ,MESAPUSER.VI_M77_YRDMAP_INF D
+          ,(SELECT * FROM TB_M80_TRF_SCH_CMN WHERE CARRY_TP = 'TR' AND TRF_STR_HOU_GATE != TRF_OBJ_HOU_GATE) SCH
+     WHERE A.TRF_PRG_STS_TP IN ('A', 'B')
+       AND B.COIL_WK_STS_TP = 'A'
+       AND A.TRF_INST_NO = B.TRF_INST_NO
+       AND B.FRI_ITM_ID = C.ITM_ID
+       AND C.ITM_ID = D.ITM_ID
+       AND C.COIL_ID = SCH.COIL_ID(+)
+       AND B.FRI_ITM_TP_CD = 'B'
+       AND NVL(SCH.TRF_STR_HOU_GATE,NVL(MESAPUSER.FC_M80_M26B0101_GATE(D.YRD_HOU_TP,D.YRD_COL_NO,D.YRD_ADR),D.GATE_NO)) LIKE NVL(:STR_GATE_NO,'%')
+       AND NVL(SCH.TRF_OBJ_HOU_GATE,MESAPUSER.FC_M26_TRF_OBJ_HOU_GATE(B.TRF_OBJ_HOU)) = :OBJ_GATE_NO
+       AND FRI_ITM_TP_CD = 'B'
+       AND ((A.TRF_CAU_TP <> 'F') AND ((SELECT V.PROC_CD 
+                                          FROM M00APUSER.VI_M00_M80A1020 V 
+                                         WHERE V.ENT_EXIT_SD_TP = 'E' 
+                                           AND V.YRD_HOU_TP = B.TRF_OBJ_HOU 
+                                           AND V.PROC_CD = (CASE WHEN C.WK_PRG_STS = 'G3' AND (C.OP_GRD NOT IN ('1','2','3','4') OR C.OP_GRD IS NULL) 
+                                                                 THEN NVL(C.REQ_NXT_PROC_CD,C.NXT_PROC_CD) 
+                                                                 ELSE C.PROC_CD 
+                                                                 END)) 
+                                          NOT IN ('33','82','83','84','85','A2','A3','A4','A5','A6','A7','A8','A9','AA','63','66','72','77','CP') 
+                                          OR B.TRF_OBJ_HOU NOT IN (SELECT V.YRD_HOU_TP 
+                                                                    FROM M00APUSER.VI_M00_M80A1020 V 
+                                                                    WHERE V.ENT_EXIT_SD_TP = 'E' 
+                                                                     AND V.PROC_CD = (CASE WHEN C.WK_PRG_STS = 'G3' AND (C.OP_GRD NOT IN ('1','2','3','4') OR C.OP_GRD IS NULL) 
+                                                                                           THEN NVL(C.REQ_NXT_PROC_CD,C.NXT_PROC_CD) 
+                                                                                           ELSE C.PROC_CD 
+                                                                                           END))
+            )OR (A.TRF_CAU_TP = 'F' AND 
+                 (
+                    (SELECT V.GATE_NO
+                        FROM M00APUSER.VI_M00_M80A1020 V                        
+                        WHERE V.ENT_EXIT_SD_TP = 'E'                                    
+                        AND V.PROC_CD = NVL((SELECT PAK.PACK_PROC_CD
+                                             FROM  MESAPUSER.TB_M80_PCK_SCH_CMN PAK
+                                            WHERE  PAK.COIL_ID = C.ITM_ID )
+                                          , DECODE(NVL(NVL((SELECT PACK_LOC_CD 
+                                                    FROM MESAPUSER.TB_M80_PCK_SCH_CMN 
+                                                   WHERE COIL_ID = C.COIL_ID),C.PAK_LOC_CD),C.SEM_PROD_PAK_LOC_CD),'PP1','P1','PP2','P2','PP3','P3','P82','P4','PP4','P4','PP5','P5','P85','P5')) 
+                    ) <> NVL(SCH.TRF_OBJ_HOU_GATE,MESAPUSER.FC_M26_TRF_OBJ_HOU_GATE(B.TRF_OBJ_HOU))
+                 )
+             )
+           )
+       -- 밑에 주석 처리 2021.03.18 시운전 테스트위해 제품이송 시에 코일 중량 5톤 차이 이상 밸리데이션 체크 삭제
+       -- AND ((FRI_ITM_TP_CD = 'C' AND ABS(B.ITM_WGT - ITM_WGT) < 5000) OR (FRI_ITM_TP_CD != 'C'))  
+       AND A.REQ_RGS_TP NOT IN ('3', '4')  
+       AND SUBSTR(C.LOD_LOC, 1, 2)  NOT IN ( 'TR', 'BA')
+       AND B.LOD_LOT_ORG_NO IS NULL
+) X
+ORDER BY GBN, DECODE(URG_MTL_TP,'Y','1', '2'), SLP_PRE_REM_DH_NUM, TRF_INST_NO, ADR ASC, ADR1 DESC;
+
+
+--:FRI_ITM_ID	GC41P5Y
+--:FRI_ITM_TP_CD	B
+--:FH_FUL_USE_YN	N
+--:STR_GATE_NO	C52
+--:OBJ_GATE_NO	C21
+```
+### 튜닝 문제 4
+```SQL
+SELECT DISTINCT/*+ M263000013  차량작업대상재관리  M263000013.selectSHP   김규리 */
+        A.ASG_SHP_NO AS CD
+       ,A.ASG_SHP_NO||'('||SHP_NM||')' AS NM
+  FROM TB_M60_ASG_SHP_REQ A, TB_M26_TRF_REQ_CMM B, TB_M26_TRF_REQ_DTL C
+ WHERE A.ASG_SHP_NO = B.ASG_SHP_NO
+   AND B.TRF_INST_NO = C.TRF_INST_NO
+   AND C.COIL_WK_STS_TP != 'C'
+ORDER BY CD
+
+```
+
+### 튜닝 문제 5
+```SQL
+WITH TB_SHPG AS /* M605000010  적송현황  M605000010.selectReqDlv  이혜인  */
+(
+SELECT 
+       NVL(FLOW_CHL,'합계')     AS FLOW_CHL
+     , SUM(NVL(REQ_DLV,0))        AS REQ_DLV
+     , SUM(NVL(MONTH_TOTAL1,0)) AS MONTH_TOTAL1
+     , DECODE(FLOW_CHL, '내수', SUM(NVL(YEAR_TOTAL1,0)) + CASE WHEN TO_CHAR(TO_DATE(:BASIC_DATE, 'YYYY-MM-DD'), 'YYYY') > '2012' THEN 0 ELSE 439568000 END,
+                        '수출', SUM(NVL(YEAR_TOTAL1,0)) + CASE WHEN TO_CHAR(TO_DATE(:BASIC_DATE, 'YYYY-MM-DD'), 'YYYY') > '2012' THEN 0 ELSE 345261000 END,
+                                SUM(NVL(YEAR_TOTAL1,0)) + CASE WHEN TO_CHAR(TO_DATE(:BASIC_DATE, 'YYYY-MM-DD'), 'YYYY') > '2012' THEN 0 ELSE 784829000 END) AS YEAR_TOTAL1
+     , MAX(NVL(YEAR_TOTAL2,0)) + CASE WHEN TO_CHAR(TO_DATE(:BASIC_DATE, 'YYYY-MM-DD'), 'YYYY') > '2012' THEN 0 ELSE 784829000 END AS YEAR_TOTAL2
+  FROM (
+        SELECT  
+               CASE WHEN B.FLOW_CHL  = MESAPUSER.PL_M00_CONST_VALUE.FLOW_CHL_INBOUND_PUB THEN '내수'
+                    WHEN B.FLOW_CHL <> MESAPUSER.PL_M00_CONST_VALUE.FLOW_CHL_INBOUND_PUB THEN '수출'
+               END FLOW_CHL
+             , CASE WHEN A.DLV_PLNT_TP = '6000'
+                                         AND A.PRD_DLV_CRYN_TP = 1  
+                                         AND A.PRD_DLV_CRYN_PST_DD = TO_CHAR(TO_DATE(:BASIC_DATE, 'YYYY-MM-DD'), 'YYYYMMDD') 
+                                         
+                                         THEN A.COIL_WGT
+                    WHEN A.DLV_PLNT_TP = '6000'
+                                         AND A.PRD_DLV_CRYN_TP = 2  
+                                         AND A.PRD_DLV_CRYN_PST_DD = TO_CHAR(TO_DATE(:BASIC_DATE, 'YYYY-MM-DD'), 'YYYYMMDD') 
+                                         AND NVL(A.REA_INF_CRYN_TP,'@') != 'B'  --정보반입분 제외 
+                                         
+                                         THEN A.COIL_WGT * -1
+                    ELSE 0 END AS REQ_DLV
+             , A.COIL_WGT * DECODE(A.PRD_DLV_CRYN_TP, '1', 1, '2', -1) AS YEAR_TOTAL1
+             , CASE WHEN A.PRD_DLV_CRYN_PST_DD BETWEEN SUBSTR(REPLACE(:BASIC_DATE, '-', ''), 1, 6) || '01' AND REPLACE(:BASIC_DATE, '-', '') 
+                    THEN A.COIL_WGT  * DECODE(A.PRD_DLV_CRYN_TP, '1', 1, '2', -1)
+               END MONTH_TOTAL1
+             , SUM(A.COIL_WGT * DECODE(A.PRD_DLV_CRYN_TP, '1', 1, '2', -1))  OVER() AS YEAR_TOTAL2
+          FROM 
+               TB_M60_SHPG_ACT A
+             , TB_M60_PRD B
+         WHERE 
+               A.COIL_ID = B.COIL_ID
+           AND A.PRD_DLV_CRYN_PST_DD LIKE SUBSTR(REPLACE(:BASIC_DATE, '-',''),1,4)||'%'
+           AND A.PRD_DLV_CRYN_PST_DD <= REPLACE(:BASIC_DATE, '-','')
+           AND A.MTL_COIL_TP = '3'
+           AND A.DLV_KND_CD = '3'
+           AND NVL(A.PRD_CTD_SAL_TP,' ') != 'B'
+           AND A.PRD_DLV_CRYN_STP_NO = 1
+       ) 
+GROUP BY GROUPING SETS ((FLOW_CHL),())                   
+)
+
+SELECT 
+       DATA2.FLOW_CHL AS FLOW_CHL                                                                                   --월목표
+     , NVL(ROUND(DATA1.REQ_DLV      / 1000),0) AS REQ_DLV                                                           --적송출고(부산) 
+     , NVL(ROUND(DATA1.MONTH_TOTAL1 / 1000),0) AS MONTH_TOTAL1                                                      --월누계
+     , NVL(ROUND(DATA1.YEAR_TOTAL1  / 1000),0) AS YEAR_TOTAL1                                                       --년누계
+     , NVL(ROUND(NVL(DATA1.YEAR_TOTAL1,0) / NVL(DECODE(DATA1.YEAR_TOTAL2, 0, NULL, DATA1.YEAR_TOTAL2),1) * 100),0) ||'%' AS YEAR_TOTAL2 --점유율
+  FROM 
+       TB_SHPG DATA1
+     , (
+        SELECT LEVEL AS LVL
+             , CASE WHEN LEVEL = 1 THEN '내수'
+                    WHEN LEVEL = 2 THEN '수출'
+                    WHEN LEVEL = 3 THEN '합계'
+               END FLOW_CHL
+          FROM DUAL
+        CONNECT BY LEVEL < 4 
+       ) DATA2
+ WHERE DATA2.FLOW_CHL = DATA1.FLOW_CHL(+)
+ORDER BY DATA2.LVL;
+
+-- :BASIC_DATE	2024-05-06
 ```
 ## FULL SCAN 확인 쿼리
 
