--- a/SQL 튜닝의 시작 2/2권 데이터 생성 스크립트.md
+++ b/SQL 튜닝의 시작 2/2권 데이터 생성 스크립트.md
@@ -1,43 +1,43 @@
 
 ```sql
-/*
-[ 데이터 생성하기 ]
+--
+--[ 데이터 생성하기 ]
+--
+--1. 테이블 설명
+--
+--* HINT_T1 [가입 고객]
+--
+--  cust_no    - 고객 번호
+--  cust_name  - 고객 이름
+--  cust_id    - 고객 고유식별자(예: 주민번호)
+--  regdate    - 가입일자
+--
+--* HINT_T2 [가입 고객의 주소]
+--
+--  addr_no    - 주소 테이블 식별자
+--  cust_no    - 고객 번호
+--  addr_div   - 주소 구분
+--  Cust_Addr  - 고객 주소
+--
+--* HINT_T3 [가입 고객의 주문내역]
+--
+--  ord_no     - 주문내역 테이블 식별자
+--  cust_no    - 고객 번호
+--  goods_no   - 상품번호
+--  orddate    - 주문 일자
+--
+--* HINT_T4 [상품]
+--
+--  goods_no   - 상품 테이블 식별자
+--  goods_name - 상품명
+--  regdate    - 상품 등록일자
 
-1. 테이블 설명
+--2. 테이블 생성하기
 
-* HINT_T1 [가입 고객]
-
-  cust_no    - 고객 번호
-  cust_name  - 고객 이름
-  cust_id    - 고객 고유식별자(예: 주민번호)
-  regdate    - 가입일자
-
-* HINT_T2 [가입 고객의 주소]
-
-  addr_no    - 주소 테이블 식별자
-  cust_no    - 고객 번호
-  addr_div   - 주소 구분
-  Cust_Addr  - 고객 주소
-
-* HINT_T3 [가입 고객의 주문내역]
-
-  ord_no     - 주문내역 테이블 식별자
-  cust_no    - 고객 번호
-  goods_no   - 상품번호
-  orddate    - 주문 일자
-
-* HINT_T4 [상품]
-
-  goods_no   - 상품 테이블 식별자
-  goods_name - 상품명
-  regdate    - 상품 등록일자
-*/
-2. 테이블 생성하기
-
-drop table hint_t1 purge ;
-drop table hint_t2 purge ;
-drop table hint_t3 purge ;
-drop table hint_t4 purge ;
+--drop table hint_t1 purge ;
+--drop table hint_t2 purge ;
+--drop table hint_t3 purge ;
+--drop table hint_t4 purge ;
 
 create table hint_t1
 as
@@ -81,7 +81,7 @@ select level as ord_no,
     replace(mod(level,1000),0,1000) as goods_no,
     to_date('20130101','yyyymmdd')+level-1 as orddate
 from dual
-connect by level <= 2500000 ;
+connect by level <= 250000 ;
 
 create table hint_t4
 as
@@ -91,7 +91,7 @@ select level as goods_no,
 from dual
 connect by level <= 100000 ;
 
-3. 인덱스 생성하기
+--3. 인덱스 생성하기
 
 create unique Index idx01_hint_t1 on hint_t1 ( cust_no ) ;
 create unique Index idx01_hint_t2 on hint_t2 ( addr_no ) ;
@@ -103,13 +103,15 @@ create unique Index idx01_hint_t4 on hint_t4 ( goods_no ) ;
 create Index idx02_hint_t4 on hint_t4 ( goods_name ) ;
 create Index idx03_hint_t4 on hint_t4 ( regdate ) ;
 
-4. 통계정보 생성하기
+--4. 통계정보 생성하기
 
-exec dbms_stats.gather_table_stats(ownname=> 'system', tabname=> 'hint_t1', cascade=>true, estimate_percent=>100);
-exec dbms_stats.gather_table_stats(ownname=> 'system', tabname=> 'hint_t2', cascade=>true, estimate_percent=>100);
-exec dbms_stats.gather_table_stats(ownname=> 'system', tabname=> 'hint_t3', cascade=>true, estimate_percent=>100);
-exec dbms_stats.gather_table_stats(ownname=> 'system', tabname=> 'hint_t4', cascade=>true, estimate_percent=>100);
+exec dbms_stats.gather_table_stats(ownname=> 'scott', tabname=> 'hint_t1', cascade=>true, estimate_percent=>100);
+exec dbms_stats.gather_table_stats(ownname=> 'scott', tabname=> 'hint_t2', cascade=>true, estimate_percent=>100);
+exec dbms_stats.gather_table_stats(ownname=> 'scott', tabname=> 'hint_t3', cascade=>true, estimate_percent=>100);
+exec dbms_stats.gather_table_stats(ownname=> 'scott', tabname=> 'hint_t4', cascade=>true, estimate_percent=>100);
 
-※ 경우에 따라 다른 스크립트를 통한 테스트도 포함되어 있음.
+
+--※ 경우에 따라 다른 스크립트를 통한 테스트도 포함되어 있음.
+
 
 ```
