--- a/SQL 튜닝의 시작 2/4장. SQL Tuning과 Hint의 관계.md
+++ b/SQL 튜닝의 시작 2/4장. SQL Tuning과 Hint의 관계.md
@@ -3,6 +3,7 @@ https://www.youtube.com/watch?v=7BLQ4p1NThg&list=WL&index=25  55:55 시점
 
 ![[Pasted image 20241206084126.png]]
 
+---
 
 # HINT 종류와 사용 방법
 ## 조인순서 관련 힌트 - ordered vs leading
@@ -52,5 +53,73 @@ SELECT * FROM   table(dbms_xplan.display_cursor(sql_id=>null, format=>'ALLSTATS 
 
 ```
 
+---
 
 ## 조인방식 관련 힌트 - use_nl, use_hash
+### Nested Loop Join vs Hash Join
+
+| USE_NL                                                                                                                                                                                                                                                                                                                                                                                                                             | USE_HASH                                                                                                                                                                                                                                                                                                                                                                                                                      |
+| ---------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------- | ----------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------- |
+| - 일반적으로 조인 대상 건수가 적을 때 유리한 조인<br>- 조인 연결 컬럼에 반드시 인덱스가 존재                                                                                                                                                                                                                                                                                                                                                                           | - 선행 테이블 건수가 많고, 후행 테이블의 Access량이 많은 경우 유리함                                                                                                                                                                                                                                                                                                                                                                                   |
+| SELECT --+ leading(t2 t3) use_nl(t3)<br>       t1.*<br>     , t2.*<br>     , t3.*<br>FROM   hint_t1 t1<br>     , hint_t2 t2<br>     , hint_t3 t3<br>WHERE  t1.cust_name = :b1 -- CUST_A<br>AND    t3.orddate BETWEEN to_date(:b2, 'yyyy/mm/dd hh24:mi:ss')  <br>        AND to_date(:b3, 'yyyy/mm/dd hh24:mi:ss') -- 2013/01/22 00:00:00, 2013/07/25 00:00:00<br>AND    t1.cust_no = t2.cust_no<br>AND    t2.cust_no = t3.cust_no; | SELECT --+ leading(t31 t2) use_hash(t3)<br>       t1.*<br>     , t2.*<br>     , t3.*<br>FROM   hint_t1 t1<br>     , hint_t2 t2<br>     , hint_t3 t3<br>WHERE  t1.cust_name = :b1 -- CUST_A<br>AND    t3.orddate BETWEEN to_date(:b2, 'yyyy/mm/dd hh24:mi:ss')  <br>AND to_date(:b3, 'yyyy/mm/dd hh24:mi:ss') -- 2013/01/22 00:00:00, 2013/07/25 00:00:00<br>AND    t1.cust_no = t2.cust_no<br>AND    t2.cust_no = t3.cust_no; |
+
+## DATA ACCESS 관련 힌트
+
+![[Pasted image 20241208125022.png]]
+
+![[Pasted image 20241208125052.png]]
+
+![[Pasted image 20241208125111.png]]
+
+
+![[Pasted image 20241208125235.png]]
+
+![[Pasted image 20241208125310.png]]
+
+![[Pasted image 20241208125406.png]]
+- 인덱스명을 모를때 컬럼 명을 써도 된다.
+
+![[Pasted image 20241208125446.png]]
+
+
+![[Pasted image 20241208125534.png]]
+
+![[Pasted image 20241208125601.png]]
+
+
+![[Pasted image 20241208125721.png]]
+
+
+![[Pasted image 20241208125809.png]]
+
+
+![[Pasted image 20241208125837.png]]
+
+
+![[Pasted image 20241208125944.png]]
+
+
+```SQL
+select --+ index_join(t3(orddate) t3(cust_no))
+        count( * )
+from   hint_t3 t3
+where  t3.orddate BETWEEN to_date('2013-01-01', 'yyyy-mm-dd')  
+        AND to_date('2013-06-30', 'yyyy-mm-dd')
+and    cust_no between '1' and '10';
+
+-------------------------------------------------------------------------------------------
+--| Id  | Operation           | Name             | Starts | A-Rows |   A-Time   | Buffers |
+-------------------------------------------------------------------------------------------
+--|   0 | SELECT STATEMENT    |                  |      1 |      1 |00:00:00.09 |    1303 |
+--|   1 |  SORT AGGREGATE     |                  |      1 |      1 |00:00:00.09 |    1303 |
+--|*  2 |   VIEW              | index$_join$_001 |      1 |      1 |00:00:00.09 |    1303 |
+--|*  3 |    HASH JOIN        |                  |      1 |      1 |00:00:00.09 |    1303 |
+--|*  4 |     INDEX RANGE SCAN| IDX02_HINT_T3    |      1 |      5 |00:00:00.06 |     640 |
+--|*  5 |     INDEX RANGE SCAN| IDX03_HINT_T3    |      1 |    181 |00:00:00.04 |     663 |
+-------------------------------------------------------------------------------------------
+
+```
+
+
+## VIEW 제어 힌트
+![[Pasted image 20241208130851.png]]
