--- a/SQL 튜닝의 시작 1, 한 시간에 싹.다.정.리!/5장. MERGE 구문 이해와 효율적인 SQL 작성하기.md
+++ b/SQL 튜닝의 시작 1, 한 시간에 싹.다.정.리!/5장. MERGE 구문 이해와 효율적인 SQL 작성하기.md
@@ -7,7 +7,7 @@
 DROP TABLE MERGE_T1 PURGE;
 DROP TABLE MERGE_T2 PURGE;
 
-- MERGE_T1 테이블 생성 
+-- MERGE_T1 테이블 생성 
 
 CREATE TABLE MERGE_T1
 AS
@@ -36,3 +36,234 @@ CREATE INDEX MERGE_T2_IDX_01 ON MERGE_T2 ( C1 ) ;
 
 EXEC dbms_stats.gather_table_stats(OWNNAME=>'SCOTT',TABNAME=>'MERGE_T2',CASCADE=>TRUE,ESTIMATE_PERCENT=>100) ;
 ```
+
+
+# 여러 업데이트 방법
+
+## UPDATE
+```SQL
+-- UPDATE문 : EMP의 추출 건수가 많다면 성능이 좋지 않음
+UPDATE EMP A
+SET    ENAME = (SELECT DNAME FROM DEPT B WHERE A.DEPTNO = B.DEPTNO)
+WHERE  A.EMPNO > 0;
+```
+
+## UJVC (Updatable Join View Check) : 10g 까지만 사용
+```SQL
+UPDATE --+ BYPASS_UJVC  -- UPDATABLE JOIN VIEW CHECK의 약자 
+       (SELECT B.DNAME, A.ENAME, A.DEPTNO
+        FROM   EMP A
+             , DEPT B
+        WHERE  A.DEPTNO = B.DEPTNO(+)
+        AND    A.EMPNO > 0)
+SET    ENAME = DNAME;
+```
+
+## MERGE
+```SQL
+MERGE --+ PARALLEL(A 2) USE_HASH(B) 
+INTO   EMP A 
+USING (SELECT C.DNAME, C.DEPTNO 
+	   FROM   DEPT C) B 
+ON (A.DEPTNO = B.DEPTNO(+) AND    A.EMPNO > 0)
+WHEN MATCHED THEN
+	UPDATE SET    A.ENAME = B.DNAME;
+```
+
+### MERGE문의 장점
+- 한번의 SQL 문으로 INSERT, UPDATE, DELETE 작업 수행
+- 조건에 따라 수행 로직 간결 표현
+- 여러 작업을 하나의 문장으로 처리하여 코드가 간결 / 유지보수 용이
+- 단일 트랜잭션 처리로 데이터 일관성 보장
+- 별도의 SELECT로 데이터 존재 여부 확인 필요없어, 성능 이점 큼
+
+### MERGE문의 구성요소
+```sql
+MERGE /*+ LEADING(ST) USE_NL(ST TT) INDEX(TT) */
+INTO   MERGE_T1 TT 
+USING (SELECT C1, C2, C3
+       FROM   MERGE_T2
+       WHERE  C1 BETWEEN 99990 AND 100090) ST 
+ON (TT.C1 = ST.C1)
+WHEN MATCHED THEN
+    UPDATE SET TT.C2 = ST.C2, TT.C3 = ST.C3
+    DELETE WHERE TT.C2 = 'A' -- UPDATE 이후 값을 체크해서 TRUE 이면 DELETE 수행
+WHEN NOT MATCHED THEN
+    INSERT (TT.C1, TT.C2, TT.C3) VALUES (ST.C1, ST.C2, ST.C3)
+    WHERE  ST.C2 = 'A'; -- 값이 참이면 INSERT 수행
+```
+
+#### INTO 절
+- UPDATE, DELETE, INSERT를 수행할 TARGE 테이블
+- PARALLEL, SOURCE/TARGET 조인 순서, 조인 방식 등의 힌트
+#### USING 절
+- SOURCE TABLE 지정 
+#### ON 절
+- TARGET 테이블의 데이터 중 SOURCE 테이블에서 추출된 데이터와 일치하는 데이터 인지 체크
+- 일치하면 `WHEN MATCHED THEN ` 이후 `UPDATE`, `DELETE` 수행
+- 일치 하지 않으면 `WHEN NOT MATCHED THEN ` 이후 `INSERT` 수행
+
+### MERGE 구문으로 처리 되는 데이터 이해하기
+```sql
+MERGE /*+ LEADING(ST) USE_NL(ST TT) INDEX(TT) */
+INTO   MERGE_T1 TT 
+USING (SELECT C1, C2, C3
+       FROM   MERGE_T2
+       WHERE  C1 BETWEEN 99990 AND 100090) ST 
+ON (TT.C1 = ST.C1)
+WHEN MATCHED THEN
+    UPDATE SET TT.C2 = ST.C2, TT.C3 = ST.C3
+    DELETE WHERE TT.C2 = 'A' -- UPDATE 이후 값을 체크해서 TRUE 이면 DELETE 수행
+WHEN NOT MATCHED THEN
+    INSERT (TT.C1, TT.C2, TT.C3) VALUES (ST.C1, ST.C2, ST.C3)
+    WHERE  ST.C2 = 'A'; -- 값이 참이면 INSERT 수행
+```
+
+수행하면 `14rows upserted.` 라는 메시지가 나온다. 어떻게 처리 되는지 확인해보자
+
+```SQL
+-- UPDATE 대상
+WITH T2 AS (
+   SELECT C1, C2, C3
+   FROM   MERGE_T2
+   WHERE  C1 BETWEEN 99990 AND 100090
+)
+SELECT T1.*, '|' AS "|", T2.*
+FROM   MERGE_T1 T1
+     , T2
+WHERE  T1.C1 = T2.C1
+; -- 11건
+       
+
+-- UPDATE 후 DELETE 대상
+WITH T2 AS (
+   SELECT C1, C2, C3
+   FROM   MERGE_T2
+   WHERE  C1 BETWEEN 99990 AND 100090
+)
+SELECT T1.*, '|' AS "|", T2.*
+FROM   MERGE_T1 T1
+     , T2
+WHERE  T1.C1 = T2.C1
+AND    T2.C2 = 'A'
+; -- 1건
+       
+       
+-- INSERT 대상
+SELECT C1, C2, C3
+FROM   MERGE_T2
+WHERE  C1 BETWEEN 99990 AND 100090
+AND    C2 = 'A'
+; -- 4건
+
+```
+
+모두 합하면 16건??? 왜 그런지 확인해보면
+
+```
+update 대상
+
+C1        C2   C3        | C1        C2   C3                                       
+--------- ---- --------- - --------- ---- -----
+    99990 U       199989 |     99990 U                                            
+    99991 V       199990 |     99991 V    1                                       
+    99992 W       199991 |     99992 W    2                                       
+    99993 X       199992 |     99993 X    3                                       
+    99994 Y       199993 |     99994 Y    4                                       
+    99995 Z       199994 |     99995 Z    5                                       
+    99996 A       199995 |     99996 A    6       <-- UPDATE 후 DELETE 대상                                 
+    99997 B       199996 |     99997 B    7                                       
+    99998 C       199997 |     99998 C    8                                       
+    99999 D       199998 |     99999 D    9                                       
+   100000 E       199999 |    100000 E                                            
+
+11 rows selected.
+
+delete 대상
+C1        C2   C3        | C1        C2   C3                                       
+--------- ---- --------- - --------- ---- -----
+    99996 A       199995 |     99996 A    6                                       
+
+
+insert 대상
+C1        C2   C3                                       
+--------- ---- -----
+    99996 A    6      <-- DELETE 대상에 보이긴 하지만 이미 matched 로 update 후 삭제 처리 됨                                   
+   100022 A    2                                       
+   100048 A    8                                       
+   100074 A    4   
+```
+
+### MERGE 문 TARGET/SOURCE 테이블의 데이터 관계
+
+#### 1) **1:1 관계**
+
+- Target Table과 Source Table 간에 1:1로 매칭되는 데이터가 있을 경우.
+- `MATCHED`로 처리된 데이터가 정확히 하나씩 업데이트됩니다.
+
+#### 2) **1:N 관계**
+
+- Source Table에서 Target Table의 특정 행과 매칭되는 데이터가 여러 개일 경우.
+- 매칭된 행에 대해 중복된 작업이 수행될 수 있으므로, `USING` 절에서 데이터를 미리 집계하거나 중복 제거가 필요합니다.
+- 예: `DISTINCT`, `GROUP BY` 사용.
+
+#### 3) **N:1 관계**
+
+- Target Table에서 Source Table의 특정 행과 여러 개의 데이터가 매칭될 경우.
+- 동일한 조건에 매칭되는 행이 여러 개라면 충돌을 방지하기 위해 Target Table에 대한 중복 데이터를 관리해야 합니다.
+
+#### 4) **N:N 관계**
+
+- 양쪽 테이블 모두 다수의 매칭 데이터가 있을 경우.
+- 이 경우에도 `USING` 절에서 데이터를 필터링하거나, 충돌 방지를 위해 고유 키를 활용해 조정해야 합니다.                                                                                                                                                                                        
+
+### MERGE문은 다양한 DML을 지원한다.
+#### CASE[1] UPDATE, DELETE, INSERT 수행
+```SQL
+MERGE /*+ LEADING(ST) USE_NL(ST TT) INDEX(TT) */
+INTO   MERGE_T1 TT 
+USING (SELECT C1, C2, C3
+       FROM   MERGE_T2
+       WHERE  C1 BETWEEN 99990 AND 100090) ST 
+ON (TT.C1 = ST.C1)
+WHEN MATCHED THEN
+    UPDATE SET TT.C2 = ST.C2, TT.C3 = ST.C3
+    DELETE WHERE TT.C2 = 'A' 
+WHEN NOT MATCHED THEN
+    INSERT (TT.C1, TT.C2, TT.C3) VALUES (ST.C1, ST.C2, ST.C3)
+    WHERE  ST.C2 = 'A'; 
+
+```
+
+#### CASE[2] : MATCH가 안되면 INSERT
+```SQL
+MERGE /*+ LEADING(ST) USE_NL(ST TT) INDEX(TT) */
+INTO   MERGE_T1 TT 
+USING (SELECT C1, C2, C3
+       FROM   MERGE_T2
+       WHERE  C1 BETWEEN 99990 AND 100090) ST 
+ON (TT.C1 = ST.C1)
+
+WHEN NOT MATCHED THEN
+    INSERT (TT.C1, TT.C2, TT.C3) VALUES (ST.C1, ST.C2, ST.C3)
+    WHERE  ST.C2 = 'A'; -- 값이 참이면 INSERT 수행
+
+```
+
+#### CASE[3] MATCH가 되면 UPDATE, DELETE 수행
+```SQL
+MERGE /*+ LEADING(ST) USE_NL(ST TT) INDEX(TT) */
+INTO   MERGE_T1 TT 
+USING (SELECT C1, C2, C3
+       FROM   MERGE_T2
+       WHERE  C1 BETWEEN 99990 AND 100090) ST 
+ON (TT.C1 = ST.C1)
+WHEN MATCHED THEN
+    UPDATE SET TT.C2 = ST.C2, TT.C3 = ST.C3
+    DELETE WHERE TT.C2 = 'A' 
+WHEN NOT MATCHED THEN
+    INSERT (TT.C1, TT.C2, TT.C3) VALUES (ST.C1, ST.C2, ST.C3)
+    WHERE  ST.C2 = 'A'; 
+
+```
+
