--- a/SQL 튜닝의 시작 1, 한 시간에 싹.다.정.리!/7장. DECODE & CASE WHEN 이해 및 조건 문 처리하기.md
+++ b/SQL 튜닝의 시작 1, 한 시간에 싹.다.정.리!/7장. DECODE & CASE WHEN 이해 및 조건 문 처리하기.md
@@ -6,7 +6,7 @@
 
 DROP TABLE DECODE_T1;
 
-- DECODE_T1 테이블 생성 
+-- DECODE_T1 테이블 생성 
 
 CREATE TABLE DECODE_T1
 ( SALE_DT VARCHAR2(32),              ---판매일자
