--- a/SQL 튜닝의 시작 1, 한 시간에 싹.다.정.리!/8장. NULL 처리 구문 이해와 효율적인 SQL 작성하기.md
+++ b/SQL 튜닝의 시작 1, 한 시간에 싹.다.정.리!/8장. NULL 처리 구문 이해와 효율적인 SQL 작성하기.md
@@ -9,7 +9,7 @@ DROP TABLE NOT_NULL_T1 PURGE ;
 DROP TABLE NOT_NULL_T2 PURGE ;
 
 
-- NULL_T 테이블 생성 
+-- NULL_T 테이블 생성 
 
 CREATE TABLE NULL_T (C1 NUMBER NOT NULL, C2 DATE, C3 VARCHAR2(10), C4 NUMBER ) ;
 
@@ -141,7 +141,7 @@ CREATE TABLE null_t4
 ) ;
 
 
-■ 데이터 입력 
+-- ■ 데이터 입력 
 
 INSERT INTO NULL_T4 VALUES (  1,'user1','20100101') ;
 INSERT INTO NULL_T4 VALUES (  2,'admin',NULL) ;
@@ -159,4 +159,271 @@ INSERT INTO NULL_T4 VALUES (201,'user1','20100602') ;
 INSERT INTO NULL_T4 VALUES (202,'admin',NULL) ;
 INSERT INTO NULL_T4 VALUES (203,'user2','20100802') ;
 COMMIT ;
+```
+
+
+# NULL 처리
+- NVL, NVL2 함수 가 있다.
+
+## NVL 활용
+### 실행 계획 분리하기
+
+#### SQL[1]. LIKE
+
+```SQL
+alter session set statistics_level = ALL;
+
+SELECT *
+FROM   NULL_T
+WHERE  C3 LIKE :B1 || '%'; -- 16-JAN-11 or NULL
+
+
+SELECT * FROM   table(dbms_xplan.display_cursor(sql_id=>null, format=>'ALLSTATS LAST -rows'));
+
+
+```
+
+```
+- :B1 값이 있는 경우
+----------------------------------------------------------------------------------------------
+| Id  | Operation                   | Name          | Starts | A-Rows |   A-Time   | Buffers |
+----------------------------------------------------------------------------------------------
+|   0 | SELECT STATEMENT            |               |      1 |      3 |00:00:00.01 |       6 |
+|   1 |  TABLE ACCESS BY INDEX ROWID| NULL_T        |      1 |      3 |00:00:00.01 |       6 |
+|*  2 |   INDEX RANGE SCAN          | NULL_T_IDX_02 |      1 |      3 |00:00:00.01 |       3 |
+----------------------------------------------------------------------------------------------
+
+- :B1 값이 Null 인 경우
+----------------------------------------------------------------------------------------------
+| Id  | Operation                   | Name          | Starts | A-Rows |   A-Time   | Buffers |
+----------------------------------------------------------------------------------------------
+|   0 | SELECT STATEMENT            |               |      1 |  90000 |00:00:00.13 |   91154 |
+|   1 |  TABLE ACCESS BY INDEX ROWID| NULL_T        |      1 |  90000 |00:00:00.13 |   91154 |
+|*  2 |   INDEX RANGE SCAN          | NULL_T_IDX_02 |      1 |  90000 |00:00:00.02 |    1165 |
+----------------------------------------------------------------------------------------------
+```
+
+두 경우 모두 INDEX RANGE SCAN을 수행한다. 문제가 무엇인가?
+
+
+#### SQL[2]. LIKE
+
+```SQL
+alter session set statistics_level = ALL;
+
+SELECT *
+FROM   NULL_T
+WHERE  C3 LIKE NVL(:B1, C3); -- 16-JAN-11 or NULL
+
+
+SELECT * FROM   table(dbms_xplan.display_cursor(sql_id=>null, format=>'ALLSTATS LAST -rows'));
+
+
+```
+
+```
+- :B1 값이 있는 경우
+------------------------------------------------------------------------------------------------
+| Id  | Operation                     | Name          | Starts | A-Rows |   A-Time   | Buffers |
+------------------------------------------------------------------------------------------------
+|   0 | SELECT STATEMENT              |               |      1 |      3 |00:00:00.01 |       6 |
+|   1 |  CONCATENATION                |               |      1 |      3 |00:00:00.01 |       6 |
+|*  2 |   FILTER                      |               |      1 |      0 |00:00:00.01 |       0 |
+|*  3 |    TABLE ACCESS FULL          | NULL_T        |      0 |      0 |00:00:00.01 |       0 |
+|*  4 |   FILTER                      |               |      1 |      3 |00:00:00.01 |       6 |
+|   5 |    TABLE ACCESS BY INDEX ROWID| NULL_T        |      1 |      3 |00:00:00.01 |       6 |
+|*  6 |     INDEX RANGE SCAN          | NULL_T_IDX_02 |      1 |      3 |00:00:00.01 |       3 |
+------------------------------------------------------------------------------------------------
+
+- :B1 값이 Null 인 경우
+------------------------------------------------------------------------------------------------
+| Id  | Operation                     | Name          | Starts | A-Rows |   A-Time   | Buffers |
+------------------------------------------------------------------------------------------------
+|   0 | SELECT STATEMENT              |               |      1 |  90000 |00:00:00.03 |    1373 |
+|   1 |  CONCATENATION                |               |      1 |  90000 |00:00:00.03 |    1373 |
+|*  2 |   FILTER                      |               |      1 |  90000 |00:00:00.03 |    1373 |
+|*  3 |    TABLE ACCESS FULL          | NULL_T        |      1 |  90000 |00:00:00.02 |    1373 |
+|*  4 |   FILTER                      |               |      1 |      0 |00:00:00.01 |       0 |
+|   5 |    TABLE ACCESS BY INDEX ROWID| NULL_T        |      0 |      0 |00:00:00.01 |       0 |
+|*  6 |     INDEX RANGE SCAN          | NULL_T_IDX_02 |      0 |      0 |00:00:00.01 |       0 |
+------------------------------------------------------------------------------------------------
+```
+
+이렇게 실행 계획이 분리 될 경우 장점은 무엇인가?
+
+
+#### SQL[3]. DECODE
+
+```SQL
+alter session set statistics_level = ALL;
+
+SELECT *
+FROM   NULL_T
+WHERE  C3 LIKE DECODE(:B1, NULL, C3, :B1); -- 16-JAN-11 or NULL
+
+
+SELECT * FROM   table(dbms_xplan.display_cursor(sql_id=>null, format=>'ALLSTATS LAST -rows'));
+
+
+```
+
+직접 DECODE() 함수도 확인해보자.
+
+
+### IS NULL 조회 개선하기
+- Nullable 칼럼에 대한 인덱스 : 값이 있는 칼럼만 인덱스 관리
+
+```SQL
+-- C3 칼럼에 대한 인덱스 확인
+SELECT 
+    ic.index_name,
+    ic.column_name,
+    i.uniqueness
+FROM 
+    all_ind_columns ic
+JOIN 
+    all_indexes i ON ic.index_name = i.index_name
+WHERE 
+    ic.table_name = 'NULL_T'
+    AND ic.column_name = 'C3';
+
+
+INDEX_NAME            COLUMN_NAME          UNIQUENESS
+--------------------- -------------------- -----------
+NULL_T_IDX_02         C3                   NONUNIQUE 
+
+```
+
+```SQL
+SELECT --+ INDEX(NULL_T NULL_T_IDX_02) 
+	   *
+FROM   NULL_T
+WHERE  C3 IS NULL;
+
+
+SELECT * FROM   table(dbms_xplan.display_cursor(sql_id=>null, format=>'ALLSTATS LAST'));
+```
+
+인덱스가 있는데 왜 `TABLE ACCESS FULL`이 수행 되었을까?
+
+해결 방법은??
+#### Function Based Index
+```SQL
+CREATE INDEX IDX_NULL_T_C3_NVL ON NULL_T (NVL(C3, 'ISNULL'));
+```
+
+```SQL
+SELECT --+ INDEX(NULL_T IDX_NULL_T_C3_NVL)
+       *
+FROM   NULL_T
+--WHERE  C3 IS NULL
+WHERE  NVL(C3, 'ISNULL') = 'ISNULL'
+;
+
+
+SELECT * FROM   table(dbms_xplan.display_cursor(sql_id=>null, format=>'ALLSTATS LAST -rows'));
+
+```
+
+```
+--------------------------------------------------------------------------------------------------
+| Id  | Operation                   | Name              | Starts | A-Rows |   A-Time   | Buffers |
+--------------------------------------------------------------------------------------------------
+|   0 | SELECT STATEMENT            |                   |      1 |  10000 |00:00:00.01 |     649 |
+|   1 |  TABLE ACCESS BY INDEX ROWID| NULL_T            |      1 |  10000 |00:00:00.01 |     649 |
+|*  2 |   INDEX RANGE SCAN          | IDX_NULL_T_C3_NVL |      1 |  10000 |00:00:00.01 |     127 |
+--------------------------------------------------------------------------------------------------
+```
+
+#### NULL이 아닌 다른 컬럼이 뒤에 붙이면?
+
+```SQL
+-- 일단 먼저 function based index를 지우고
+DROP INDEX IDX_NULL_T_C3_NVL;
+
+-- 새로운 인덱스를 생성한다.
+CREATE INDEX NULL_T_IDX_04 ON NULL_T(C3, C1);
+
+```
+
+```sql
+
+SELECT --+ INDEX(NULL_T NULL_T_IDX_04)
+       *
+FROM   NULL_T
+WHERE  C3 IS NULL
+;
+
+SELECT * FROM   table(dbms_xplan.display_cursor(sql_id=>null, format=>'ALLSTATS LAST'));
+```
+
+```
+-------------------------------------------------------------------------------------------------------
+| Id  | Operation                   | Name          | Starts | E-Rows | A-Rows |   A-Time   | Buffers |
+-------------------------------------------------------------------------------------------------------
+|   0 | SELECT STATEMENT            |               |      1 |        |  10000 |00:00:00.01 |     645 |
+|   1 |  TABLE ACCESS BY INDEX ROWID| NULL_T        |      1 |  10000 |  10000 |00:00:00.01 |     645 |
+|*  2 |   INDEX RANGE SCAN          | NULL_T_IDX_04 |      1 |  10000 |  10000 |00:00:00.01 |     126 |
+-------------------------------------------------------------------------------------------------------
+```
+
+#### NULL 조치, 정리
+- 처음부터 Nullable 칼럼을 최소화 하자. 컬럼에 default 설정 하자
+- 인덱스 구성을 Nullable 단일 컬럼이 아닌 뒤에 NULL아 아닌 칼럼이 붙는 복합 인덱스로 구성하자
+- 비트맵 인덱스는 NULL값을 인덱스에 포함한다, 다만 값의 종류가 아주 적을 때 유리하다.
+- 
+
+### IS NOT NULL 개선 방안
+
+ 
+```SQL
+-- SQL 1
+SELECT *
+FROM NOT_NULL_T1 T1
+WHERE  C3 is not null;
+
+SELECT * FROM   table(dbms_xplan.display_cursor(sql_id=>null, format=>'ALLSTATS LAST -rows'));
+
+-- SQL 2
+SELECT --+ INDEX(T1 NOT_NULL_T1_IDX_01)
+       *
+FROM NOT_NULL_T1 T1
+WHERE  C3 is not null;
+
+SELECT * FROM   table(dbms_xplan.display_cursor(sql_id=>null, format=>'ALLSTATS LAST -rows'));
+
+-- SQL 3
+SELECT 
+       *
+FROM NOT_NULL_T1 T1
+WHERE  C3 > CHR(0);
+
+SELECT * FROM   table(dbms_xplan.display_cursor(sql_id=>null, format=>'ALLSTATS LAST -rows'));
+```
+
+```
+
+----------------------------------------------------------------------------------
+| Id  | Operation         | Name        | Starts | A-Rows |   A-Time   | Buffers |
+----------------------------------------------------------------------------------
+|   0 | SELECT STATEMENT  |             |      1 |     50 |00:00:00.02 |     879 |
+|*  1 |  TABLE ACCESS FULL| NOT_NULL_T1 |      1 |     50 |00:00:00.02 |     879 |
+----------------------------------------------------------------------------------
+ 
+---------------------------------------------------------------------------------------------------
+| Id  | Operation                   | Name               | Starts | A-Rows |   A-Time   | Buffers |
+---------------------------------------------------------------------------------------------------
+|   0 | SELECT STATEMENT            |                    |      1 |     50 |00:00:00.02 |    1237 |
+|   1 |  TABLE ACCESS BY INDEX ROWID| NOT_NULL_T1        |      1 |     50 |00:00:00.02 |    1237 |
+|*  2 |   INDEX FULL SCAN           | NOT_NULL_T1_IDX_01 |      1 |     50 |00:00:00.02 |    1187 |
+---------------------------------------------------------------------------------------------------
+
+---------------------------------------------------------------------------------------------------
+| Id  | Operation                   | Name               | Starts | A-Rows |   A-Time   | Buffers |
+---------------------------------------------------------------------------------------------------
+|   0 | SELECT STATEMENT            |                    |      1 |     50 |00:00:00.01 |      54 |
+|   1 |  TABLE ACCESS BY INDEX ROWID| NOT_NULL_T1        |      1 |     50 |00:00:00.01 |      54 |
+|*  2 |   INDEX RANGE SCAN          | NOT_NULL_T1_IDX_01 |      1 |     50 |00:00:00.01 |       4 |
+---------------------------------------------------------------------------------------------------
+ 
 ```
