--- a/SQL 튜닝의 시작 2/4장. SQL Tuning과 Hint의 관계.md
+++ b/SQL 튜닝의 시작 2/4장. SQL Tuning과 Hint의 관계.md
@@ -122,4 +122,36 @@ and    cust_no between '1' and '10';
 
 
 ## VIEW 제어 힌트
+https://www.youtube.com/watch?v=7BLQ4p1NThg&list=WL&index=25 1:17:52
 ![[Pasted image 20241208130851.png]]
+
+
+## SUBQUERY 제어 힌트
+![[Pasted image 20241212141905.png]]
+
+
+![[Pasted image 20241212141931.png]]
+
+![[Pasted image 20241212141957.png]]
+
+![[Pasted image 20241212142024.png]]
+## EXPANSION 제어 힌트
+
+![[Pasted image 20241212142217.png]]
+
+
+![[Pasted image 20241212142131.png]]
+
+## WITH절 제어 힌트
+![[Pasted image 20241212142301.png]]
+
+![[Pasted image 20241212142321.png]]
+
+
+
+
+## PARALLEL 제어 힌트
+![[Pasted image 20241212142349.png]]
+
+
+![[Pasted image 20241212142422.png]]
