--- a/SQL 튜닝의 시작 1, 한 시간에 싹.다.정.리!/0장. 들어가기에 앞서.md
+++ b/SQL 튜닝의 시작 1, 한 시간에 싹.다.정.리!/0장. 들어가기에 앞서.md
@@ -215,3 +215,18 @@ FROM SQL_STATS
 
 
 ```
+
+## 튜닝은
+- 튜닝은 I/O를 줄이는 것이다.
+- OLTP 튜닝은 스포츠카(적은 데이터를 빠르게), 대용량 튜닝은 화물 트럭(많은 데이터를 효율적으로 빠르게)
+- 업무부터 파악해라
+- 신규 인덱스 생성 후 다른 쿼리도 모니터링 해라
+- 고정관념을 깨라
+
+## 그래서 어떤 방법을 써볼까?
+- Keep Buffer Pool(마스터 코드, 생산 코일공통 등)
+- 테이블/인덱스 파티셔닝(월별 이력 데이터)
+- rowid를 사용해서 튜닝하는 것도 생각해라
+- 많이 쓰는 값을 인덱스에 포함(Covering Index/Include Index)
+- 반정규화를 고려하자
+- 
