--- a/SQL 튜닝의 시작 1, 한 시간에 싹.다.정.리!/2장. 서브쿼리와 성능 문제 이해하기.md
+++ b/SQL 튜닝의 시작 1, 한 시간에 싹.다.정.리!/2장. 서브쿼리와 성능 문제 이해하기.md
@@ -379,7 +379,7 @@ SELECT * FROM   TABLE(DBMS_XPLAN.DISPLAY_CURSOR(SQL_ID=>NULL, FORMAT=>'ALLSTATS 
 
 ```
 
-** 해결방안2 (적절한 인덱스가 있을 경우)**
+**해결방안2 (적절한 인덱스가 있을 경우)**
 ```SQL
 
 SELECT --+ QB_NAME(MAIN) LEADING(T2@SUB) USE_NL(T1@MAIN)
@@ -445,7 +445,77 @@ SELECT * FROM   TABLE(DBMS_XPLAN.DISPLAY_CURSOR(SQL_ID=>NULL, FORMAT=>'ALLSTATS 
 | NO_SWAP_JOIN_INPUTS | HASH JOIN 시 조인 순서가 바뀌는 경우, 이를 강제적으로 바꾸지 못하도록 제어할 수 있다.                                                 |
 | PUSH_SUBQ           | 서브쿼리가 먼저 수행되도록 제어하는 힌트이다.                                                                              |
 
+---
+## 미리 보기
+```SQL
+alter session set statistics_level = ALL;
 
+SELECT C4
+     , C5
+     , C6
+FROM   SUBQUERY_T1 T1
+WHERE  C6 >= :b1
+AND    C6 <= :b2 
+AND    EXISTS (SELECT 
+                       'X'
+               FROM   SUBQUERY_T2 T2
+               WHERE  T2.C1 = T1.C4
+               AND    T2.C3 >= :b3 
+               AND    T2.C3 <= :b4)
+               ;
+               
+SELECT * FROM   TABLE(DBMS_XPLAN.DISPLAY_CURSOR(SQL_ID=>NULL, FORMAT=>'ALLSTATS LAST'));      
+```
+1) 서브쿼리를 Filter 동작으로 수행
+
+2) 서브쿼리를 Nested Loops Semi Join으로 수행 
+
+3) 서브쿼리를 Hash Join Semi Join으로 수행,  서브쿼리를 Main SQL 보다 먼저 수행
+
+4) 서브쿼리를 Hash Semi Join으로 수행, Main SQL을 먼저 수행
+
+5) Nested Loop Join으로 수행, 서브쿼리부터 수행
+
+6) Hash Join으로 처리, 서브쿼리부터 수행
+```sql
+alter session set statistics_level = ALL;
+
+SELECT C4
+     , C5
+     , C6
+FROM   SUBQUERY_T1 T1
+WHERE  C6 >= :b1
+AND    C6 <= :b2 
+AND    NOT EXISTS (SELECT 
+                           'X'
+                   FROM   SUBQUERY_T2 T2
+                   WHERE  T2.C1 = T1.C4
+                   AND    T2.C3 >= :b3 
+                   AND    T2.C3 <= :b4);
+SELECT * FROM   TABLE(DBMS_XPLAN.DISPLAY_CURSOR(SQL_ID=>NULL, FORMAT=>'ALLSTATS LAST'));     
+```
+
+8) NOT Exists, Nested Loops Anti Join으로 수행
+
+9) NOT Exists, Hash Join Anti로 수행
+
+```sql
+alter session set statistics_level = ALL;
+
+
+SELECT A.*
+FROM   EMP A
+WHERE  EMPNO IN (SELECT MAX(EMPNO) 
+                 FROM   EMP X 
+                 GROUP BY DEPTNO);
+                 
+SELECT * FROM   TABLE(DBMS_XPLAN.DISPLAY_CURSOR(SQL_ID=>NULL, FORMAT=>'ALLSTATS LAST'));     
+```
+
+10) 서브쿼리 먼저 수행, Nested Loop Join으로 수행
+
+
+---
 
 ### 1) 서브쿼리를 Filter 동작으로 수행
 ```SQL
@@ -484,7 +554,7 @@ SELECT * FROM   TABLE(DBMS_XPLAN.DISPLAY_CURSOR(SQL_ID=>NULL, FORMAT=>'ALLSTATS 
 
 ```
 
-### 2)  서브쿼리를 Nested Loops Semi Join으로 수행
+### 2) 서브쿼리를 Nested Loops Semi Join으로 수행
 ```SQL
 SELECT C4
      , C5
@@ -785,7 +855,7 @@ SELECT * FROM   TABLE(DBMS_XPLAN.DISPLAY());
 
 ```
 
-### 9) 서브쿼리 먼주 수행, Nested Loop Join으로 수행
+### 9) 서브쿼리 먼저 수행, Nested Loop Join으로 수행
 ```SQL
 -- 변경전
 SELECT A.*
