--- a/SQL 튜닝의 시작 1, 한 시간에 싹.다.정.리!/3장. 스칼라 서브쿼리의 이해와 효율적인 SQL 작성하기.md
+++ b/SQL 튜닝의 시작 1, 한 시간에 싹.다.정.리!/3장. 스칼라 서브쿼리의 이해와 효율적인 SQL 작성하기.md
@@ -62,7 +62,7 @@ EXEC dbms_stats.gather_table_stats(OWNNAME=>'SCOTT',TABNAME=>'SCALAR_T3',CASCADE
 - 데이터가 추출되지 않아도 된다. --> outer join 과 동일한 특성
 
 # 스칼라 서브쿼리와 조인의 이해 및 활용하기
-## 스칼라 서브쿼리는 최종 결과 만큼 수행하자
+## 스칼라 서브쿼리는 최종 결과 만큼 수행
 ```SQL
 -- SQL1
 SELECT c1, c2, c3,
