--- a/SQL 튜닝의 시작 1, 한 시간에 싹.다.정.리!/8장. NULL 처리 구문 이해와 효율적인 SQL 작성하기.md
+++ b/SQL 튜닝의 시작 1, 한 시간에 싹.다.정.리!/8장. NULL 처리 구문 이해와 효율적인 SQL 작성하기.md
@@ -369,7 +369,7 @@ SELECT * FROM   table(dbms_xplan.display_cursor(sql_id=>null, format=>'ALLSTATS 
 
 #### NULL 조치, 정리
 - 처음부터 Nullable 칼럼을 최소화 하자. 컬럼에 default 설정 하자
-- 인덱스 구성을 Nullable 단일 컬럼이 아닌 뒤에 NULL아 아닌 칼럼이 붙는 복합 인덱스로 구성하자
+- 인덱스 구성을 Nullable 단일 컬럼이 아닌 뒤에 NULL이 아닌 칼럼이 붙는 복합 인덱스로 구성하자
 - 비트맵 인덱스는 NULL값을 인덱스에 포함한다, 다만 값의 종류가 아주 적을 때 유리하다.
 - 
 
