--- a/친절한 SQL 튜닝/3장 인덱스 튜닝/3장 인덱스 튜닝.md
+++ b/친절한 SQL 튜닝/3장 인덱스 튜닝/3장 인덱스 튜닝.md
@@ -130,3 +130,142 @@ organization index ;
 개발 프레임워크에 미리 구현돼 있는 기능을 활용하라
 
 ## 3.2.3 OLTP 환경에서 부분범위 처리를 위한 성능 개선 원리
+소트 하기 위해서는 모든 데이터를 추출하게 만들면 느리다.
+인덱스를 잘 만들면 순서대로 추출 하여 소트 연산을 생략 할 수 있다.
+모든 데이터 전체를 추출하지 않아도 된다. 이 경우 플랜에서 `SORT ORDER BY` 연산을 없앨 수 있다.
+
+### 소트 연산 생략 해보자
+```sql
+select 게시글ID, 제목, 작성자, 등록일시
+from   게시판
+where  게시판구분코드 = 'A'
+order by 등록일시 desc
+```
+
+#### 인덱스 : 게시판구분코드
+![[Pasted image 20250206134411.png]]
+
+#### 인덱스 : 게시판구분코드 + 등록일시
+![[Pasted image 20250206134436.png]]
+
+### 멈출 수 있어야 의미 있는 부분범위 처리
+페이징 처리는 5장 3절에 있다.
+
+
+# 3.3 인덱스 스캔 효율화
+- 운영환경에서 일반적인 튜닝 기법은 인덱스 컬럼 추가
+## 3.3.1 인덱스 탐색
+![[Pasted image 20250206155834.png]]
+
+![[Pasted image 20250206155859.png]]
+
+![[Pasted image 20250206155952.png]]
+
+![[Pasted image 20250206160011.png]]
+
+![[Pasted image 20250206160051.png]]
+
+조건절 1~5 까지는 각 조건들이 스캔량을 줄이는 역할을 했다.
+
+![[Pasted image 20250206160119.png]]
+
+조건절 6은 C1 조건절이 스캔 시작과 끝을 결정하는 역할을 했지만 C2는 필터 역할만 했다.
+
+## 3.3.2 인덱스 스캔 효율성
+
+조회 대상 인덱스
+![[Pasted image 20250206161415.png]]
+
+
+```sql
+-- 인덱스 : C1 + C2 + C3 + C4
+select * from t
+where c1 = '성'
+and   c2 = '능'
+and   c3 = '검'
+
+select * from t
+where c1 = '성'
+and   c2 = '능'
+and   c4 = '선'
+```
+
+두 쿼리의 스캔 범위를 찾아보자
+
+
+
+
+
+
+
+
+![[Pasted image 20250206160856.png]]
+
+
+
+## 3.3.3 엑세스 조건과 필터 조건
+![[Pasted image 20250206161521.png]]
+
+- 인덱스 액세스 조건 : 인덱스의 전체 스캔 범위를 결정하는 조건
+- 인덱스 필터 조건 : 스캔 대상에서 필터 처리 하는 조건
+- 테이블 필터 조건 : 인덱스에 없는 컬럼을 테이블 액세스 해서 필터 처리
+## 3.3.4 비교 연산자 종류와 컬럼 순서에 따른 군집성
+
+![[Pasted image 20250206161652.png]]
+
+### 추출 데이터를 찾아보자
+#### 조건절 1
+```sql
+where c1 = 1
+and   c2 = 'A'
+and   c3 = '나'
+and   c4 = 'a'
+
+-- 5, 6, 7
+```
+
+#### 조건절 2
+```sql
+where c1 = 1
+and   c2 = 'A'
+and   c3 = '나'
+and   c4 >= 'a'
+```
+
+#### 조건절 3
+```sql
+where c1 = 1
+and   c2 = 'A'
+and   c3 between '가' and '나'
+and   c4 = 'a'
+```
+
+#### 조건절 4
+```sql
+where c1 = 1
+and   c2 <= 'B'
+and   c3 = '나'
+and   c4 between 'a' and 'b'
+```
+
+
+## 3.3.5 인덱스 선행 컬럼이 등치(=) 조건이 아닐 때 생기는 비효율
+
+```sql
+select 해당층, 평당가, 입력일, 해당동, 매물구분, 연사용일수, 중개업소코드 
+from   매물아파트매매 
+where  아파트시세코드='A01011350900056' 
+and    평형 ='59' 
+and    평형타입 ='A' 
+and    인터넷매물 between '1' and '3' 
+order by 입력일 desc 
+```
+
+### 인덱스 : 아파트시세코드 + 평형 + 평형타입 + `인터넷매물`
+![[Pasted image 20250207090103.png]]
+
+
+### 인덱스 : `인터넷매물` + 아파트시세코드 + 평형 + 평형타입
+![[Pasted image 20250207090209.png]]
+
+## 3.3.6 BETWEEN을 IN-List로 전환
